src/css/fluid-covid-map-viz.css
/* ... */
.visually-hidden {
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
}

/******** The panel of the a11y feature filter list **********/
.fl-mapviz-filter-panel {
    display: none;
    max-width: 100%;
}

/* All a11y feature list */
.fl-mapviz-filters {
    display: flex;
    flex-direction: column;
}

/* Individual a11y feature */
.fl-mapviz-filter {
    align-items: center;
    display: flex;
    flex-direction: row;
    height: 7rem;
}

/* The title of each a11y feature */
.fl-mapviz-filter-title {
    display: inline-block;
    font-family: Fira Sans, Arial Narrow, Arial, Helvetica, sans-serif;
    font-size: 1.5rem;
    font-stretch: condensed;
    font-style: normal;
    font-weight: 600;
    line-height: 1.875rem;
    text-transform: uppercase;
    vertical-align: middle;
    width: 12.5rem;
}

/* The checkbox for each a11y feature */
.fl-checkbox-holder span {
    background-image: url("../img/Checkbox-unselected.svg");
    background-position: center;
    background-repeat: no-repeat;
    display: inline-block;
    height: 31px;
    margin-right: 4px;
    vertical-align: middle;
    width: 31px;
}

.fl-checkbox-holder span:hover {
    outline: 1px solid #000;
}

.fl-checkbox-holder input:checked + span {
    background-image: url("../img/Checkbox-selected.svg");
}

/* The icon for each a11y feature */
.fl-mapviz-filter-icon {
    background-position: center;
    background-repeat: no-repeat;
    background-size: 3.125rem 3.125rem;
    display: inline-block;
    height: 3.75rem;
    padding: 0.3rem;
    vertical-align: middle;
    width: 3.75rem;
}

/* The tooltip icon for each a11y feature */
.fl-mapviz-filter-tooltip-icon {
    background-image: url(../img/Tooltip-icon.svg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: 1.25rem 1.25rem;
    display: inline-block;
    height: 1.25rem;
    margin-bottom: 3.125rem;
    margin-right: 0.5rem;
    width: 1.25rem;
}

/* For all hoverable elements */
.flc-mapviz-hoverable:hover {
    outline: 1px solid #000;
    outline-offset: 1px;
}

/* The parent container of filter buttons */
.fl-mapviz-filter-buttons {
    display: flex;
    justify-content: space-evenly;
    margin-bottom: 1rem;
    margin-top: 1rem;
}

/* "apply filters" and "reset filters" buttons */
.fl-mapviz-apply-filters,
.fl-mapviz-reset-filters {
    align-items: center;
    background-color: transparent;
    border-style: none;
    display: inline-flex;
    height: 1.625rem;
    margin: 0.5rem;
    width: 10rem;
}

.fl-mapviz-apply-filters svg,
.fl-mapviz-reset-filters svg {
    fill: none;
    height: 2rem;
    margin-right: 0.1875rem;
    padding: 0.1875rem;
    width: 2rem;
}

.fl-mapviz-apply-filters span,
.fl-mapviz-reset-filters span {
    display: inline-flex;
}

/******** Expand/collapse button for the city list and the search results panels ********/
.fl-mapviz-expand-collapse-button-holder {
    align-self: center;
    background: none;
    border: none;
    margin: 0.5rem 0 0.5rem 0;
    width: 4rem;
}

.fl-mapviz-expand-collapse-button-holder svg {
    fill: white;
    height: 0.7rem;
    width: 1.4rem;
}

/* When the city list/search results panel is collapsed, hide all relevant elements */
.fl-mapviz-expand-collapse-button-holder[aria-expanded="true"] > .fl-mapviz-expand-button,
.fl-mapviz-expand-collapse-button-holder[aria-expanded="false"] > .fl-mapviz-collapse-button,
.fl-mapviz-expand-collapse-button-holder[aria-expanded="false"] ~ .fl-mapviz-search-result-list,
.fl-mapviz-expand-collapse-button-holder[aria-expanded="false"] ~ .fl-mapviz-search-result-pagination {
    display: none;
}

/******** The city list panel ********/
.fl-mapviz-city-list {
    display: none;
}

.fl-mapviz-city-list-title h2 {
    margin: 0;
}

/******** The search results panel ********/
.fl-mapviz-search-results {
    background-color: white;
    border-radius: 1rem 1rem 0 0;
    bottom: 0;
    display: flex;
    flex-direction: column;
    height: 60%;
    justify-content: space-between;
    margin: 0;
    position: fixed;
    width: 100%;
    z-index: 1;
}

/* The expand/collapse button and the panel heading */
.fl-mapviz-back-button {
    align-self: center;
    background-color: #acdeeb;
    display: inline-flex;
    justify-content: center;
    width: 100%;
}

.fl-mapviz-back-button h2 {
    align-self: center;
    font-size: 1.5rem;
    font-weight: 500;
    line-height: 1.8rem;
    margin: 0;
}

.fl-mapviz-back-button svg {
    fill: white;
    height: 2.3rem;
    margin-right: 0.5rem;
    padding: 0.7rem 0;
    width: 2.3rem;
}

/* Search result list */
.fl-mapviz-search-result-list {
    /* This list takes up the remaining space whenever there's any */
    flex-grow: 1;
    overflow-y: scroll;
}

/* For individual search result */
.fl-mapviz-search-result {
    border-bottom: 1px solid #c4c4c4;
    margin-left: 0.5rem;
    padding: 0.5rem 0.5rem;
}

.fl-mapviz-search-result .fl-mapviz-hospital-title {
    font-weight: 700;
}

/* The hover style for each search result */
.fl-mapviz-search-result-hover {
    outline: 2px solid #55769f;
    outline-offset: -2px;
}

/* The selected style for the search result */
.fl-mapviz-search-result-selected {
    background: #fbdc90;
}

/* The search result panel -> pagination container that holds the summary text and pagination buttons */
.fl-mapviz-search-result-pagination {
    align-items: center;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 0.5rem;
    user-select: none;
}

/* The "go backward" pagination button */
.fl-mapviz-page-left {
    background-image: url(../img/Page-left.svg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: 2.375rem 2.375rem;
    display: inline-block;
    height: 2.5rem;
    width: 2.5rem;
}
/* ... */

