fix: a little height adjustment for the hospital list panel on mobile

--- a/src/css/fluid-covid-map-viz.css
+++ b/src/css/fluid-covid-map-viz.css
@@ -301,9 +301,9 @@ body::after {
     bottom: 0;
     display: flex;
     flex-direction: column;
-    height: 60%;
     justify-content: space-between;
     margin: 0;
+    max-height: 60%;
     position: fixed;
     width: 100%;
     z-index: 1;
